--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,14 @@
     <groupId>twitter-stream</groupId>
     <artifactId>twitter-stream</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spark.version>1.6.1</spark.version>
         <slf4j.version>1.7.19</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <guava.version>19.0</guava.version>
+        <twitter4j.version>4.0.4</twitter4j.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -50,6 +49,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>${twitter4j.version}</version>
         </dependency>
     </dependencies>
 
