--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <log4j.version>1.2.17</log4j.version>
         <guava.version>19.0</guava.version>
         <twitter4j.version>4.0.4</twitter4j.version>
+        <kafka.version>0.9.0.1</kafka.version>
     </properties>
     <dependencies>
         <dependency>
@@ -54,6 +55,11 @@
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-core</artifactId>
             <version>${twitter4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.version}</version>
         </dependency>
     </dependencies>
 
