--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <guava.version>19.0</guava.version>
         <twitter4j.version>4.0.4</twitter4j.version>
         <kafka.version>0.9.0.1</kafka.version>
+        <java-websocket.version>1.3.0</java-websocket.version>
+        <jackson.version>2.7.3</jackson.version>
     </properties>
     <dependencies>
         <dependency>
@@ -65,6 +67,26 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>${java-websocket.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
