--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "babel-polyfill": "^6.5.0",
     "classnames": "^2.2.0",
+    "immutable": "^3.7.6",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   }
