--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sass-boilerplate",
+  "name": "twitter-stream-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
